[metadata]
name = nexusviewpro
version = 0.1.0
author = Ankit Sharma
author_email = ankit302290@gmail.com
description = Render websites and YouTube videos inside Jupyter Notebooks
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Ankitshrma25/nexusviewpro.git
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
    Intended Audience :: Science/Research
    Framework :: Jupyter

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
install_requires =
    ipython>=7.0.0

[options.packages.find]
where = src

[options.extras_require]
dev =
    pytest>=7.0
    pytest-mock>=3.0
    flake8>=5.0
    mypy>=1.0
    tox>=4.0

[options.entry_points]
console_scripts =
    nexusviewpro = nexusviewpro.interfaces.cli:main

[flake8]
max-line-length = 88
exclude = venv,.tox,build,dist

[mypy]
python_version = 3.8
warn_return_any = True
ignore_missing_imports = True