
# setup.cfg
#
# PURPOSE: Package metadata and tool configuration for setuptools.
#
# This file answers: "What IS this package, who made it, what does it
# need to run, and where is its source code?"
#
# The [metadata] section is what appears on PyPI — name, description,
# classifiers, author. The [options] section tells setuptools HOW to
# find and include your code. Tool sections ([flake8]) keep all config
# in one file rather than scattering it across .flake8, mypy.ini etc.


# ===========================================================================
# [metadata] — PyPI listing information
# ===========================================================================

[metadata]
# The name used in: pip install nexusviewpro
# Must be globally unique on PyPI. Hyphens are conventional (not underscores).
name = nexusviewpro

# Semantic versioning: MAJOR.MINOR.PATCH
#   PATCH: bug fixes only         (0.1.0 → 0.1.1)
#   MINOR: new features, no breaks (0.1.0 → 0.2.0)
#   MAJOR: breaking changes        (0.1.0 → 1.0.0)
version = 0.1.0

author = Ankit Sharma
author_email = ankit302290@gmail.com

# One-line summary shown in PyPI search results — keep it under 100 chars
description = Render websites and YouTube videos inside Jupyter Notebooks

# Full description shown on the PyPI package page.
# "file: README.md" reads the contents of README.md at build time.
long_description = file: README.md
long_description_content_type = text/markdown

# The canonical URL shown on PyPI — link to your GitHub repo
url = https://github.com/Ankitshrma25/nexusviewpro.git

# License shown on PyPI
license = MIT

# Classifiers help users find your package by category on PyPI.
# Full list: https://pypi.org/classifiers/
# These affect SEARCH only — they don't enforce anything.
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering
    Topic :: Software Development :: Libraries :: Python Modules
    Framework :: Jupyter

# Searchable keywords on PyPI
keywords = jupyter, notebook, ipython, youtube, iframe, render, embed


# ===========================================================================
# [options] — where is the code and what does it need?
# ===========================================================================

[options]
# THE MOST IMPORTANT LINE for src/ layout.
# Tells setuptools: "don't look for packages in the root —
# look inside the src/ folder instead."
# Without this line, pip install finds nothing and the package is empty.
package_dir =
    = src

# "find:" means: scan the directory declared in package_dir and
# automatically discover all Python packages (folders with __init__.py).
# We don't need to list nexusviewpro, nexusviewpro.core, etc. manually.
packages = find:

# Minimum Python version. 3.8 gives us:
#   - f-strings (3.6+)
#   - walrus operator (3.8+)
#   - typing improvements (3.8+)
# If you use match/case syntax you'd need >=3.10.
python_requires = >=3.9

# Runtime dependencies — installed automatically with pip install nexusviewpro.
# Only list what the package NEEDS TO RUN, not dev tools.
# ipython>=7.0.0 gives us IPython.display.IFrame and IPython.display.HTML.
install_requires =
    ipython>=7.0.0


# ===========================================================================
# [options.packages.find] — configure the package auto-discovery
# ===========================================================================

[options.packages.find]
# This section works with `packages = find:` above.
# "where = src" tells the finder: start scanning from the src/ directory.
# This is the second half of the src/ layout configuration.
where = src


# ===========================================================================
# [options.extras_require] — optional dependency groups
# ===========================================================================

[options.extras_require]
# Install dev tools with: pip install -e ".[dev]"
# This is the professional way to manage dev vs runtime dependencies.
# Dev tools never get installed when a user runs pip install nexusviewpro.
dev =
    pytest>=7.0
    pytest-mock>=3.0
    flake8>=5.0
    mypy>=1.0
    tox>=4.0
    build>=0.10.0
    twine>=4.0.0

# Install docs tools with: pip install -e ".[docs]"
# Useful when a contributor wants to build the documentation locally.
docs =
    mkdocs>=1.4.0
    mkdocs-material>=9.0.0


# ===========================================================================
# [options.entry_points] — register CLI commands
# ===========================================================================

[options.entry_points]
# When this package is installed, pip creates a shell command called
# "nexusviewpro" that calls the main() function in interfaces/cli.py.
# Users can then run: nexusviewpro --help
# from their terminal after pip install nexusviewpro.
console_scripts =
    nexusviewpro = nexusviewpro.interfaces.cli:main


# ===========================================================================
# [options.package_data] — include non-Python files in the package
# ===========================================================================

[options.package_data]
# Include any .json config files or .md files that live inside the package.
# The "*" wildcard means: any file in any subdirectory of nexusviewpro/.
# Add to this list as you add data files (e.g. templates, default configs).
nexusviewpro =
    py.typed


# ===========================================================================
# [flake8] — linting configuration
# ===========================================================================

[flake8]
# Black formatter uses 88 chars. Match it here so flake8 and black don't fight.
max-line-length = 88

# Folders to never lint — build artifacts, venv, IDE files
exclude =
    venv,
    .venv,
    .tox,
    build,
    dist,
    *.egg-info,
    .git,
    __pycache__,
    .mypy_cache,
    .pytest_cache

# Ignore specific rules that conflict with Black's formatting style:
#   E203: whitespace before ':' (Black adds this in slices)
#   W503: line break before binary operator (Black's style)
extend-ignore = E203, W503

# Show the rule code alongside each error — makes googling easy
show-source = True
show-pep8 = True

# Enforce import ordering — isort compatible
# (only active if you install flake8-isort)
# import-order-style = google